--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,12 @@
-event <br />
+  DATE   TIME         PLACE   EVENT   
+
+<%= form_for Event.new do |form| %>
+<%= form.date_field :date %>
+<%= form.time_field :time %>
+<%= form.text_field :place %>
+<%= form.text_field :event %>
+<% end %>
+
 
 <%= @events.each do |event| %>
   <% event %>
