--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,19 +1,12 @@
 
-
-<%= form_for Event.new do |form| %>
-<%= form.date_field :date %>
-<%= form.datetime_local_field :time %>
-<%= form.text_field :place %>
-<%= form.text_field :event %>
-<%= form.submit %>
-<% end %>
+<a href='events/new'>Add an event</a>
 
 
 
 
-<% @events.each do |event| %>
-  <%= event.event %>
+<p> <% @events.each do |event| %>
+  <%= link_to event.event, event_path(event) %>
   <%= event.date %>
   <%= event.time %>
-  <%= event.place %>
-<% end %>
+  <% end %>
+</p>
