--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,6 @@
-
 <%= form_for Event.new do |form| %>
 <%= form.date_field :date %>
-<%= form.time :time %>
+<%= form.time_field :time %>
 <%= form.text_field :place %>
 <%= form.text_field :event %>
 <%= form.submit %>
