--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,9 @@
+<br />
+
+
 <%= form_for Event.new do |form| %>
 <%= form.date_field :date %>
-<%= form.time_field :time %>
-<%= form.text_field :place, placeholder: "where is it taking place" %>
+<%= form.text_field :place, placeholder: "where and when" %>
 <%= form.text_field :event, placeholder: "event name" %>
 <%= form.submit %>
 <% end %>
