css added to show

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -23,6 +23,13 @@
   left: 34%;
 }
 
+.show {
+  color: DARKSALMON;
+  position: absolute;
+  top:  27%;
+  left: 34%;
+  font-size: 44px;
+}
 body {
   background-color: beige
 }
