--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 
 
-<div>
+<div class="show">
 
   <%= @event.event %> <br />
   <%= @event.date %><br /><br / />
@@ -8,4 +8,4 @@
 
   <%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br />
   <%= link_to "Delete #{@event.event}", event_path(@event), method: :delete %>
-</table>
+</div>
