css added to edit

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -30,6 +30,13 @@
   left: 34%;
   font-size: 44px;
 }
+
+.edit {
+  position: absolute;
+  top:  37%;
+  left: 34%;
+}
+
 body {
   background-color: beige
 }
