--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-
+<div class="edit">
 <%= form_for @event do |form| %>
   <%= form.date_field :date %>
   <%= form.time_field :time %>
@@ -6,3 +6,4 @@
   <%= form.text_field :event %>
   <%= form.submit %>
 <% end %>
+</div>
