--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,8 +3,8 @@
 <div class="new">
 <%= form_for Event.new do |form| %>
 <%= form.date_field :date %>
-<%= form.text_field :place, placeholder: "where and when" %>
-<%= form.text_field :event, placeholder: "event name" %>
+<%= form.text_field :place, placeholder: "where and when", :required => true %>
+<%= form.text_field :event, placeholder: "event name", :required => true %>
 <%= form.submit %>
 <% end %>
 </div>
