devise views added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,12 @@
 
   <body>
 
-    <% if user_signed_in? %>
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
-    <% else %>
-    <div id="signin">
-      <%= link_to "SIGN IN", new_user_session_path %>
-    </div>
-      <div id="signup">
-      <%= link_to "SIGN UP", new_user_registration_path %>
-    <% end %>
+    <ul class="hmenu">
+      <%= render 'devise/menu/registration_items' %>
+      <%= render 'devise/menu/login_items' %>
+    </ul>
+
+    <%= yield %>
       </div>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
