fixed double yield bug

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -10,6 +10,7 @@
   <%= link_to event.event, event_path(event) %>
   <%= event.date %>
   <%= event.place %>
+  <%= event.image %>
   <br />
   <% end %>
 </div>
