--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,10 +1,12 @@
 
-
 <div class="new">
 <%= form_for Event.new do |form| %>
 <%= form.date_field :date %>
 <%= form.text_field :place, placeholder: "where and when", :required => true %>
 <%= form.text_field :event, placeholder: "event name", :required => true %>
+<%= form.file_field :image %>
 <%= form.submit %>
 <% end %>
 </div>
+
+<%= link_to 'Back', events_path %>
