--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,7 +4,7 @@
   <%= @event.event %> <br />
   <%= @event.date %><br /><br / />
   <%= @event.place %><br />
-  <%= @event.image %><br />
+  <%= image_tag @event.image %><br />
 
   <%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br />
   <%= link_to "Delete #{@event.event}", event_path(@event), method: :delete %>
