comments shown on event

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -3,3 +3,5 @@
 <%= form.text_field :body, placeholder: "comment", :required => true %>
 <%= form.submit %>
 <% end %>
+
+<%= link_to 'Back', events_path %>
