--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,5 +23,5 @@
   <%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br />
   <%= link_to "Delete #{@event.event}", event_path(@event), method: :delete %>
   <br />
-  <%= link_to "Add comment", new_event_comment_path(@event) %>
+  <%= link_to "Add a comment", new_event_comment_path(@event) %>
 </div>
