--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,11 @@
 <%= link_to 'Back', events_path %>
 
 <div class="show">
+  <%= @event.user.email %>
   <%= @event.event %> <br />
   <%= @event.date %><br />
   <%= @event.place %><br />
+  <%= link_to 'I went to this event', new_event_attendance_path(@event) %>
 
   <% if @event.comments.any? %>
     <ul>
@@ -18,6 +20,15 @@
   <div class="image">
     <%= image_tag @event.image %><br />
   </div>
+
+Attendees
+<ul>
+  <% @event.users.each do |user| %>
+    <li>
+      <%= user.email %>
+    </li>
+  <% end %>
+</ul>
 
 <br />
   <%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br />
