--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -55,3 +55,23 @@ a {
 a:hover {
   color: black;
 }
+
+
+.comments {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 18px;
+    color: blue;
+}
+
+
+.titles {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size: 24px;
+    color: black;
+}
+
+.attendees {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 18px;
+  color: green;
+}
