--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,10 @@
   <%= @event.place %><br />
   <%= link_to 'Im attending this event', new_event_attendance_path(@event) %>
   <br /><br />
+  <div class="titles">
   Attendees
+</div>
+<div class="attendees">
   <ul>
     <% @event.users.each do |user| %>
     <li>
@@ -15,8 +18,13 @@
     </li>
     <% end %>
   </ul>
+</div>
 
+  <div class="titles">
   Comments<br /><br />
+  </div>
+
+  <div class="comments">
   <% if @event.comments.any? %>
       <% @event.comments.each do |comment| %>
           <%= comment.body %> by <%= comment.user.email %> <br />
@@ -26,12 +34,13 @@
   <% end %>
   <br />
   <div class="image">
-    <%= image_tag @event.image %><br />
+    <%= image_tag @event.image %>
   </div>
+</div>
 
-<br />
+  <%= link_to "Add a comment", new_event_comment_path(@event) %>
+  <br />
   <%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br />
   <%= link_to "Delete #{@event.event}", event_path(@event), method: :delete %>
   <br />
-  <%= link_to "Add a comment", new_event_comment_path(@event) %>
 </div>
