flash notices fixed

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Back', events_path %>
 
 <div class="show">
-  <%= @event.event %> <br />
+  <%= @event.event %> 
   created by <%= @event.user.email %> <br />
   <%= @event.date %><br />
   <%= @event.place %><br />
