--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,8 @@
   created by <%= @event.user.email %> <br />
   <%= @event.date %><br />
   <%= @event.place %><br />
-  <%= link_to 'Im attending this event', new_event_attendance_path(@event) %>
+  <%= link_to 'Im attending this event', event_attendances_path(@event), method: :create %>
+
   <br /><br />
   <div class="titles">
   Attendees
