--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,8 +4,6 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <p><%= f.label :username %><br />
-    <%= f.text_field :username %></p>
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
@@ -28,4 +26,4 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "users/shared/links" %>
