--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,15 +1,29 @@
 
-<div id="add">
   <form action="events/new">
-    <input type="submit" value="Add an event" />
+    <input class="btn btn-success" type="submit" value="Add a new event">
   </form>
-</div>
 
-    <% @events.each do |event| %>
-    <%= link_to event.event, event_path(event) %>
-    <%= event.date %>
-    <%= event.place %>
-    <br />
+<div class="container">
+<div class="table-responsive">
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Event</th>
+      <th>Date</th>
+      <th>Place</th>
+    </tr>
+  <thead>
+
+  <% @events.each do |event| %>
+  <tbody>
+  <tr>
+    <td> <%= link_to event.event, event_path(event) %></td>
+    <td> <%= event.date %></td>
+    <td> <%= event.place %></td>
+    <br /><br /><br />
     <% end %>
+  </tr>
+   <tr>
+   </table>
   </div>
 </div>
