bootstrap forms_for

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,6 @@
-<div class="edit">
-<%= form_for @event do |form| %>
+
+<div class="form-group" class="form-control">
+<%= bootstrap_form_for @event do |form| %>
   <%= form.date_field :date %>
   <%= form.text_field :place, placeholder: "where and when", :required => true %>
   <%= form.text_field :event, placeholder: "event name", :required => true %>
