--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,9 @@
 
+<div class="container">
   <form action="events/new">
-    <input class="btn btn-success" type="submit" value="Add a new event">
+    <input class="btn btn-link btn-lg" type="submit" value="Add a new event">
   </form>
 
-<div class="container">
-<div class="table-responsive">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -26,4 +25,3 @@
    <tr>
    </table>
   </div>
-</div>
