--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class="new">
-<%= form_for Event.new do |form| %>
+<div class="form-group" class="form-control">
+<%= bootstrap_form_for Event.new, layout: :inline do |form| %>
 <%= form.date_field :date %>
 <%= form.text_field :place, placeholder: "where and when", :required => true %>
 <%= form.text_field :event, placeholder: "event name", :required => true %>
@@ -8,5 +8,6 @@
 <%= form.submit %>
 <% end %>
 </div>
+
 
 <%= link_to 'Back', events_path %>
