some styling shit

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.img-rounded {
+  position: absolute;
+  top: 30px;
+  left: 500px;
+}
+
+.panel-body {
+  color: #E75480;
+}
