--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -11,3 +11,14 @@
 .panel-body {
   color: #E75480;
 }
+
+.form-group {
+  position: relative;
+  top: 98px;
+}
+
+#new-back {
+  position: relative;
+  right: 918px;
+  top: 59px;
+}
