--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,12 @@
 
   <body>
     <% if user_signed_in? %>
+    <div id="sign_out">
       <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+      </div>
     <% else %>
       <%= link_to "Sign in", new_user_session_path %>
       <%= link_to "Sign up", new_user_registration_path %>
-      <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
     <% end %>
       </div>
     <%= yield %>
