edit and add pages fuxed

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -13,12 +13,12 @@
 }
 
 .form-group {
-  position: relative;
-  top: 98px;
+  margin: 0 auto;
+  margin-top: 60px;
 }
 
 #new-back {
-  position: relative;
-  right: 918px;
-  top: 59px;
+  position: fixed;
+  right: 1059px;
+  top: 55px;
 }
