--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
-<div class="form-group" class="form-control">
+<div class="form-group" 
 <%= bootstrap_form_for Event.new, layout: :inline do |form| %>
 <%= form.date_field :date %>
 <%= form.text_field :place, placeholder: "where and when", :required => true %>
