--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,12 +1,15 @@
+<div class="new-add"
+<h4 id= "event-titles">Add an event </h4>
+</div>
 <div class="form-group">
-<%= bootstrap_form_for Event.new do |form| %>
+
+<%= form_for Event.new do |form| %>
 <%= form.date_field :date %>
 <%= form.text_field :place, placeholder: "where and when", :required => true %>
 <%= form.text_field :event, placeholder: "event name", :required => true %>
 <%= form.file_field :image, :required => true %>
 <%= form.submit %>
 <% end %>
-</div>
 </div>
 
 <div id='new-back'>
