--- a/app/views/events/_comments.html.erb
+++ b/app/views/events/_comments.html.erb
@@ -1,19 +1,21 @@
 <div class="titles">
-Comments<br /><br />
+  <div id = "lnkz">
+    <%= link_to "Add a comment", new_event_comment_path(@event) %>
+  </div><br />
+<div id ="nit"> Comments:<br /></div>
 </div>
-<div id = "lnkz">
-<%= link_to "Add a comment", new_event_comment_path(@event) %>
-</div>
+<div class="comments">
 <% if @event.comments.any? %>
     <% @event.comments.each do |comment| %>
         <%= comment.body %><div id = "nit"> by </div>
-        <%= comment.user.username %>
+          <h5 id="event-titles"> <%= comment.user.username %> </h5>
         <%= link_to "Edit", edit_comment_path(comment) %>
         <%= link_to "Delete", comment_path(comment), method: :delete %><br>
   <% end %>
 <% else %>
   <p>No comments yet</p>
 <% end %>
+</div>
 <br />
 
 <div class="img-rounded">
@@ -21,6 +23,6 @@ Comments<br /><br />
 </div>
 
   <h4 id= "event-titles">
-<%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br /><br />
+<%= link_to "Edit #{@event.event}", edit_event_path(@event) %><br />
 <%= link_to "Delete #{@event.event}", event_path(@event), method: :delete %>
 </h4>
