--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,6 +16,7 @@
       </form>
     </div>
 
+<div class="event-list">
   <% @events.each do |event| %>
   <tbody>
   <tr>
@@ -24,7 +25,6 @@
     <td> <%= event.place %></td>
     <% end %>
   </tr>
-   <tr>
-   </table>
-  </div>
+  <tr>
+  </table>
 </div>
