new comments css;

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -23,10 +23,11 @@
   border-radius: 0;
 }
 
-#event-name {
-  margin-left: 20px;
+#event-names {
+  margin-left: 10px;
   font-weight: bold;
   font-style: italic;
+  color: #66c2ff;
 }
 
 #event-titles {
