--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -5,13 +5,14 @@
 
 <%= form_for Event.new do |form| %>
 <%= form.date_field :date %>
-<%= form.text_field :place, placeholder: "where and when", :required => true %>
+<%= form.text_field :place, placeholder: "where and which time", :required => true %>
 <%= form.text_field :event, placeholder: "event name", :required => true %>
 <%= form.file_field :image, :required => true %>
 <%= form.submit %>
 <% end %>
+<br />
+Must include a picture, by choosing a file
 </div>
-
 <div id='new-back'>
 <%= link_to 'Back', events_path %>
 </div>
