--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,7 +1,11 @@
+<div class="form-group">
 
 <%= form_for @comment, url: comment_path(@comment) do |form| %>
 <%= form.text_field :body, placeholder: "comment", required: true %>
 <%= form.submit %>
 <% end %>
 
+</div>
+<div id='new-back'>
 <%= link_to 'Back', events_path %>
+</div>
